_sass/imports/_product_grid.scss
.product-grid {
  padding: 0;
  margin: 0;

  display: grid;
  align-items: flex-start;
  justify-content: space-between;
  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
  grid-row-gap: 15px;
  grid-column-gap: 15px;

  &__definition {
    display: flex;
    flex-direction: column;
  }

  &__title {
    margin-top: $spacing--unit*4;
    margin-bottom: $spacing--unit*1;
    font-size: $font_size_medium;
    color: $color_dark_grey;
  }

  &__price {
    margin-top: 15px;
    font-size: $font_size_medium;
    color: $color_dark_grey;
    font-weight: bold;
  }

  &__category {
    text-transform: uppercase;
    font-weight: bold;
    font-size: $font_size_small;
    color: $color_dark_grey;
  }

  &__sub-category {
    text-transform: uppercase;
    font-weight: 100;
    font-size: $font_size_small;
    color: $color_light_grey;
  }

  &__item-image {
    width: 100%;
    height: auto;
    background-size: cover;
    border-radius: $spacing--unit * 3;
    position: relative;
    margin: 0;
    padding: 0;
    cursor: pointer;
    &--featured {
      box-shadow: 0px 20px 52px rgba(0, 0, 0, 0.31);
    }
  }

  &__item-figure {
    position: relative;
  }

  &__item {
    width: 100%;
    list-style: none;
    margin: 0;
    margin-bottom: $spacing--unit*10;
    user-select: none; // Prevents selecting text when scroll is active
  }

  &__item-buy {
    position: absolute;
    bottom: 15px;
    right: 15px;
    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
  }

  &--draggable {
    @include smaller-than-tablet {
      display: inline-flex;
    }
  }
  &--draggable & {
    &__item {
      @include smaller-than-tablet {
        min-width: 270px;
        &:not(:last-child) {
          margin-right: 25px;
        }
      }
    }
  }
}

